data/all-infer-tutorial/command-injection4/infer-out/report.txt
#0
tutorial/command-injection4.c:20: error: Api Misuse
  CmdInjection.
  18.   strcat(command, argv[1]);
  19. 
  20.   system(command);
        ^
  21.   return 0;
  22. }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Api Misuse(API_MISUSE): 1
